# apartment-analysis

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  apartment_analysis_plan.md  pyproject.toml  real_estate_analysis_implementation_guide.md  real_estate_complex_info_analysis_plan.md  real_estate_project_plan.md  real_estate_representative_complex_analysis_plan.md  requirements.txt  streamlit_app.py
.github/workflows/: update_data.yml
analysis/: common.py  complex_analysis.py  correlation.py  level1.py  level2.py  level3.py  level4.py  regional.py  representative_complex_analysis.py  trend.py
config/: settings.py
dashboard/: app.py  data_loader.py
dashboard/pages/: page_00_market_snapshot_diagnostics.py  page_01_overview.py  page_02_trade_price.py  page_03_rent_price.py  page_04_macro_indicators.py  page_05_correlation.py  page_06_complex_overview.py  page_06_market_snapshot.py  page_07_complex_drivers.py  page_08_complex_dynamics.py  page_09_complex_forecast.py  page_10_representative_overview.py  page_11_representative_drivers.py  page_12_representative_dynamics.py  page_13_representative_forecast.py  page_14_trade_filter_diagnostics.py
data/docs/: apt_rent_columns.md  (+3 more)
notebook/: 00-temp.ipynb  02_a3_bollinger_outlier_review.ipynb
pipelines/: aggregation_pipeline.py  apartment_list.py  building_ledger_pipeline.py  building_ledger_summary.py  data_preprocessing.py  ecos_pipeline.py  market_pipeline.py  market_snapshot_pipeline.py  molit_pipeline.py  representative_complex_pipeline.py
scripts/: build_summary.py  run_full_pipeline.py
(+22 files in other folders)
