[project]
name = "apartment-analysis"
version = "0.1.0"
description = "아파트/부동산 데이터 수집 및 분석"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "yfinance>=0.2.36",
    "python-dotenv>=1.0.0",
    "xmltodict>=0.13.0",
    "pandas>=2.1.4",
    "numpy>=1.26.4",
    "pyarrow>=15.0.0",
    "scipy>=1.12.0",
    "plotly>=5.18.0",
    "folium>=0.16.0",
    "streamlit-folium>=0.18.0",
    "streamlit>=1.32.0",
    "statsmodels>=0.14.0",
    "tqdm>=4.66.1",
    "loguru>=0.7.2",
]

[project.optional-dependencies]
advanced = [
    "scikit-learn>=1.4.1",
    "dtaidistance>=2.3.11",
    "hmmlearn>=0.3.2",
    "geopandas>=0.14.3",
    "pyproj>=3.6.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "notebook>=7.0.0",
    "pandas-stubs==3.0.0.260204",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["config", "pipelines", "analysis", "dashboard"]
